Made it so the alert class' z-index is -1 so that it doesn't prevent clicking on the navbar when it's no visible.

--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -431,13 +431,13 @@
 
 .alert {
   position: fixed;
-  top: 3.8rem;
+  top: 3.75rem;
   left: 0;
   right: 0;
   transition: transform, opacity 0.3 ease;
   transform: translateY(-30px);
   opacity: 0;
-  z-index: 9997;
+  z-index: -1;
 
   &-content {
     display: flex;
@@ -458,9 +458,20 @@
     }
   }
 
+  & .close-btn {
+    opacity: 0;
+    z-index: -1;
+  }
+
   &.show {
     transform: translateY(0px);
+    z-index: 9997;
     opacity: 1;
+
+    .close-btn {
+      opacity: 1;
+      z-index: 9997;
+    }
   }
 }
 
